# RayTracer

./: CMakeLists.txt  README.md  RayTracer.sln
RayTracer/: RayTracer.vcxproj  RayTracer.vcxproj.filters  Sphere.hpp  Utils.hpp  output.ppm
include/: Camera.hpp  Color.hpp  Hitter.hpp  HitterList.hpp  KernelWrapper.h  Lambertian.hpp  Logger.hpp  Material.hpp  MaterialInterface.hpp  PNGWriter.hpp  PPMWriter.hpp  Ray.hpp  Sphere.hpp  ThreadPool.hpp  Utils.hpp  Vec3.hpp  WriterInterface.hpp
src/: main.cpp  raytracing.cpp
src/Core/: Camera.cpp  Color.cpp  HitterList.cpp  Lambertian.cpp  Metal.cpp  Ray.cpp  Sphere.cpp  ThreadPool.cpp  Vec3.cpp
src/Cuda/: RayKernel.cxx
src/Utils/: Utils.cpp
src/Writers/: PNGWriter.cpp  PPMWriter.cpp
